2002-08-28  Christopher Faylor  <cgf@redhat.com>

	* malloc.cc: Protect some definitions to avoid a compile time warning.

2002-08-27  Nicholas Wourms  <nwourms@netscape.net>

	* cygwin.din: Export getc_unlocked, getchar_unlocked,
	putc_unlocked, putchar_unlocked functions.
	* include/cygwin/version.h: Bump api minor.

2002-08-28  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_socket.cc (fhandler_socket::recvfrom): Eliminate flags
	not understood by WinSock.
	(fhandler_socket::sendto): Ditto.  If WinSock sendto() returns
	WSAESHUTDOWN, change errno to EPIPE and raise SIGPIPE if MSG_NOSIGNAL
	isn't set in flags.
	* include/cygwin/socket.h: Define MSG_WINMASK and MSG_NOSIGNAL.
	* include/cygwin/version.h: Bump API minor number.

2002-08-28  Corinna Vinschen  <corinna@vinschen.de>

	* poll.cc (poll): Eliminate erroneous POLLERR conditional.

2002-08-26  Conrad Scott  <conrad.scott@dsl.pipex.com>

	* fhandler_socket.cc (fhandler_socket::check_peer_secret_event):
	Fix strace message.
	(fhandler_socket::connect): Remove sigframe.
	(fhandler_socket::accept): Ditto.
	(fhandler_socket::getsockname): Ditto.
	(fhandler_socket::getpeername): Ditto.
	(fhandler_socket::recvfrom): Ditto.
	(fhandler_socket::recvmsg): Ditto.
	(fhandler_socket::sendto): Ditto.
	(fhandler_socket::sendmsg): Ditto.
	(fhandler_socket::close): Ditto.
	(fhandler_socket::ioctl): Ditto.
	* ioctl.cc (ioctl): Add sigframe.
	*net.cc (cygwin_sendto): Ditto.
	(cygwin_recvfrom): Ditto.
	(cygwin_recvfrom): Ditto.
	(cygwin_connect): Ditto.
	(cygwin_shutdown): Ditto.
	(cygwin_getpeername): Ditto.
	(cygwin_accept): Ditto.  Improve strace message.
	(cygwin_getsockname): Ditto.  Ditto.
	(cygwin_recvmsg): Ditto.  Ditto.
	(cygwin_sendmsg): Fix strace message.

2002-08-27  Christopher Faylor  <cgf@redhat.com>

	* child_info.h: Add _PROC_WHOOPS enum value.
	(CURR_CHILD_INFO_MAGIC): Update.
	(child_info::magic): Make 'long'.
	* cygheap.h: Export _cygheap_start.
	* cygheap.cc: Don't declare _cygheap_start.